# tree_menu

./: README.md  db.sqlite3  menu_data.json  pyproject.toml
config/: settings.py  urls.py
menu/: admin.py  models.py  urls.py
menu/migrations/: 0001_initial.py  0002_menuitem_menu.py  0003_remove_menu_title_remove_menuitem_title_and_more.py
menu/templates/menu/: about.html  articles.html  blog.html  contacts.html  design.html  home.html  menu.html  menu_item.html  news.html  services.html  support.html  web.html
menu/templatetags/: menu_extras.py  menu_tags.py
