[tool.poetry]
name = "treemenu"
version = "0.1.0"
description = ""
authors = ["kirvitchenko <vitchenkokir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.8"
black = "^25.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
